Eliminate segnalazioni sonar.